--- a/news-app/package.json
+++ b/news-app/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "precommit": "pretty-quick --staged && tslint -c node_modules/@clearpeaks/code-linting-style/tslint.js 'src/**/*.ts'"
   },
   "private": true,
   "dependencies": {
